--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "emulator"]
 	path = emulator
-	url = https://github.com/jeltevanbommel/VEmulator.git
+	url = git@github.com:jeltevanbommel/VEmulate-Core-Public.git
